--- a/css/style-goodharvest.css
+++ b/css/style-goodharvest.css
@@ -64,7 +64,7 @@ h3 {
 h4, h5, h6, p, li, blockquote {
   font-family: "Lato";
   font-style: normal;
-  letter-spacing: .0rem;
+  letter-spacing: .01rem;
 }
 
 h4 {
@@ -804,11 +804,11 @@ footer p {
   /* margin-bottom: 4.8rem; */
 }
 
-#chroma-top img {
+#goodharvest-top img {
   max-width: 80%;
 }
 
-#chroma-top p {
+#goodharvest-top p {
   padding: 1.2rem 0;
 }
 
@@ -845,8 +845,8 @@ footer p {
 
 #chroma-solution-img {
   padding: 1.2rem;
-  transform: translate(-162px, 30px);
-  width: 130%;
+  /* transform: translate(-50px, 30px); */
+  width: 100%;
 }
 
 #chroma-problem p {
@@ -1540,7 +1540,6 @@ ol {
 
 .link-special {
 	color: #000000;
-  /* display: inline-flex; */
 	font-size: 1.5rem;
   font-family: Lato, sans-serif;
   font-style: normal;
@@ -1548,20 +1547,8 @@ ol {
   padding: 0 10px 5px 10px;
   position: relative;
   text-align: center;
-	text-decoration: none;
+  text-decoration: underline;
   z-index: 1;
-}
-
-.link-special::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(to top, #E9DAD1 25%, rgba(0, 0, 0, 0) 40%);
-
-  position: absolute;
-  left: 0;
-  bottom: 2px;
-  z-index: -1;
 }
 
 
@@ -1843,9 +1830,14 @@ ol {
     margin: 1rem;
   }
 
+
+  .link-special {
+    font-size: 1.6rem;
+  }
+
   /* -----------HERO---------- */
 
-  #chroma-top img {
+  #goodharvest-top img {
     padding-bottom: 1.8rem;
     width: 70%;
    }
@@ -1930,12 +1922,6 @@ ol {
   grid-column: 3;
   grid-row: 3;
 }
-
-
-
-
-
-
 
 #comp-list {
   padding: 0 12%;
@@ -2243,7 +2229,7 @@ ol {
     font-weight: normal;
     font-size: 1.8rem;
     line-height: 140%;
-    padding-bottom: 3.6rem;
+    padding-bottom: 2rem;
   }
 
   li {
@@ -2296,6 +2282,33 @@ ol {
      width: inherit;
    }
 
+
+   .link-special {
+     font-size: 2rem;
+     color: #565656;
+     text-decoration: none;
+     display: inline-block;
+     padding: 15px 20px;
+     position: relative;
+   }
+
+   .link-special:after {
+     background: none repeat scroll 0 0 transparent;
+     bottom: 0;
+     content: "";
+     display: block;
+     height: 3px;
+     left: 50%;
+     position: absolute;
+     background: #F5C049;
+     transition: width 0.3s ease 0s, left 0.3s ease 0s;
+     width: 0;
+   }
+
+   .link-special:hover:after {
+     width: 100%;
+     left: 0;
+   }
 
   /*----------------------BUTTONS----------------------*/
 
@@ -2417,20 +2430,20 @@ ol {
     margin: 0 auto;
   }
 
-  #chroma-top img {
+  #goodharvest-top img {
     animation-duration: 3s;
     animation-delay: .2s;
     max-width: 350px;
     margin: 1rem 0;
    }
 
-   #chroma-top h2 {
+   #goodharvest-top h2 {
      animation-duration: 2s;
      animation-delay: .5s;
    }
 
 
-  #chroma-top p {
+  #goodharvest-top p {
     animation-duration: 2s;
     animation-delay: .8s;
     padding: 2rem 0;
@@ -2474,8 +2487,8 @@ ol {
   #chroma-problem-img {
       padding: 1.2rem;
       /* width: 100%; */
-      transform: translate(71px, 30px);
-      width: 130%;
+      /* transform: translate(71px, 30px); */
+      width: 100%;
   }
 
   #chroma-problem h2 {
@@ -2497,20 +2510,12 @@ ol {
     margin-bottom: 6.4rem;
     padding: 7.2rem 0 7.2rem 0;
   }
-/*
-  #design-process p {
-    margin: 0 auto;
-    width: 55%;
-  } */
 
   .design-process-large {
-    font-size: 3.6rem;
     line-height: 130%;
     padding-bottom: 4.8rem;
-    /* text-align: center; */
     max-width: 1000px;
   }
-
 
   #design-title {
     padding-bottom: 3.6rem;
@@ -2672,10 +2677,6 @@ ol {
 
   .outer-user-story-container {
     background-color: #E9DAD1;
-  }
-
-  .section-title {
-    font-size: 2.4rem;
   }
 
   .user-profile {
@@ -3123,46 +3124,6 @@ ol {
   width: 100%;
 }
 
-
-
-
-/* SPECIAL LINKS */
-
-  .link-special {
-    font-size: 1.8rem;
-  }
-
-  .link-special::before{
-  	content: "";
-  	width: 100%;
-  	height: 100%;
-  	background-image: linear-gradient(to top, #E9DAD1 25%, rgba(0, 0, 0, 0) 40%);
-
-  	position: absolute;
-  	left: 0;
-  	bottom: 2px;
-  	z-index: -1;
-
-  	will-change: width;
-  	transform: rotate(-1deg);
-  	transform-origin: left bottom
-  }
-
-  .link-special:hover::before{
-  	width: 0;
-  }
-
-  /*
-  * animation styles
-  */
-
-  .link-special::before{
-  	transition: width .1s ease-out;
-  }
-
-  .link-special:hover::before{
-  	transition-duration: .15s;
-  }
 
 
 
