--- a/css/style.css
+++ b/css/style.css
@@ -1928,7 +1928,7 @@ input[type=text],input[type=email] textarea {
  }
 
 .contact-container .btn {
-  width: 50%;
+  width: 19%;
 }
 
   #message-box {
